--- a/index.html
+++ b/index.html
@@ -3,12 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>Griglia Campo Minato</title>
     <!--css -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="game-container">
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+      <div class="game-cell-container">
+        <div class="game-cell">1</div>
+        <!--end game cell-->
+      </div>
+      <!--end game cell container-->
+    </div>
+    <!-- end game container -->
     <!--my js-->
     <script src="./js/script.js"></script>
   </body>
