add logical base in human language

--- a/index.html
+++ b/index.html
@@ -8,52 +8,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <form action="" id="game-settings" method="post">
+      <h1>Campo minato senza mine</h1>
+      <button id="button-start">Inizia</button>
+    </form>
     <div class="game-container">
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
+      <!--end form-->
       <div class="game-cell-container">
         <div class="game-cell">1</div>
         <!--end game cell-->
