end exercize start bonus 1

--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
   <body>
     <form action="" id="game-settings" method="post">
       <h1>Campo minato senza mine</h1>
-      <button id="button-start">Inizia</button>
+      <button id="button-start" type="submit">Inizia</button>
     </form>
-    <div class="game-container">
-      <!--end form-->
-      <div class="game-cell-container">
-        <div class="game-cell">1</div>
-        <!--end game cell-->
-      </div>
-      <!--end game cell container-->
-    </div>
+    <!--end form-->
+    <div class="game-container"></div>
     <!-- end game container -->
     <!--my js-->
     <script src="./js/script.js"></script>
